<resources>
    <string name="app_name">Assignment App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email" />
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="click_to_login">Click To Login</string>
    <string name="click_to_register">click_to_register</string>
    <string name="clicktoregister">Click to register</string>
    <string name="Click_to_login">Click to login</string>
    <string name="AssignmentApp">Navigation Drawer</string>
    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close" />
    <string name="add_assignment_dialog_title">Add Assignment</string>
    <string name="add_assignment_dialog_add_button_text">Add</string>
    <string name="course_prompt">Select a course</string>
    <string name="delete_button_text">Delete</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="add_assignment_dialog_cancel_button_text">Cancel</string>
    <string name="enter_assignment_description">Enter Assignment Description</string>
    <string name="enter_assignment_name">Enter Assignment Name</string>
    <string name="selected_date">Selected Date:</string>
    <string name="course_hint">Add a course</string>


</resources>