<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/date_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selected_date"
            android:textSize="20sp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp" />

        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/CustomDatePicker"/>

        <EditText
            android:id="@+id/editTextAssignment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_assignment_name"
            android:inputType="text"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:hint="@string/enter_assignment_description"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />

        <EditText
            android:id="@+id/course_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/course_hint" />

        <Spinner
            android:id="@+id/course_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/course_prompt"
            android:background="@drawable/spinner_background"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:spinnerMode="dialog"
            android:popupBackground="@color/purple_500"
            android:paddingTop="20dp"
            android:minHeight="48dp"
            android:paddingBottom="20dp"/>

<!--        <TextView-->
<!--            android:id="@+id/selected_item_view"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:background="@drawable/selected_item_background"-->
<!--            android:padding="8dp"-->
<!--            android:textColor="@android:color/white"-->
<!--            android:textSize="18sp" />-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal"-->
<!--            android:gravity="end">-->

<!--            <Button-->
<!--                android:id="@+id/btnAdd"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:text="@string/add"-->
<!--                android:paddingTop="16dp"-->
<!--                android:paddingBottom="8dp"-->
<!--                android:background="@drawable/button_background"-->
<!--                android:textColor="@android:color/white"-->
<!--                android:textSize="18sp"-->
<!--                android:layout_marginEnd="4dp"-->
<!--                android:layout_marginRight="4dp"/>-->

<!--            <Button-->
<!--                android:id="@+id/delete_button"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:text="@string/delete"-->
<!--                android:layout_gravity="end"-->
<!--                android:paddingTop="8dp"-->
<!--                android:paddingBottom="16dp"-->
<!--                android:background="@drawable/button_background"-->
<!--                android:textColor="@android:color/white"-->
<!--                android:textSize="18sp"-->
<!--                android:layout_marginStart="4dp"-->
<!--                android:layout_marginLeft="4dp"/>-->

<!--        </LinearLayout>-->

    </LinearLayout>

</ScrollView>
